--- a/package.xml
+++ b/package.xml
@@ -52,6 +52,6 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <appname>Map Annotator</appname>
+    <appname>Map annotator</appname>
   </export>
 </package>
