--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -2,14 +2,15 @@
   "name": "map-annotator",
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
-    "ros-topic": "jstnhuang/ros-topic#^0.1.0",
-    "paper-button": "PolymerElements/paper-button#^1.0.15"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "ros-topic": "jstnhuang/ros-topic#^1.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "web-component-tester": "^6.0.0-prerelease.5",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+    "web-component-tester": "^6.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   }
 }
