--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -5,7 +5,8 @@
     "polymer": "Polymer/polymer#^2.0.0",
     "ros-topic": "jstnhuang/ros-topic#^1.0.0",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0"
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
+    "ros-rviz": "jstnhuang/ros-rviz#^1.1.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
